src/index.css
@import "tailwindcss";

@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;700&display=swap');

/*  Define the Dark Mode strategy (Outside @theme) */
@custom-variant dark (&:where(.dark, .dark *));

@theme {
  /* Your custom variables stay here */
  --color-purple-main: #7C5DFA;
  --color-purple-hover: #9277FF;
  --color-dark-bg: #0C0E16;
  --color-dark-card: #1E2139;
  --color-dark-text: #DFE3FA;
  --color-light-bg: #F8F8FB;
  --color-light-text: #0C0E16;
  --color-status-paid: #33D69F;
  --color-status-pending: #FF8F00;
  --color-status-draft: #373B53;
  --color-pages-color: #141625;

  --font-spartan: "League Spartan", sans-serif;
}

/*  Global Base Styles */
@layer base {
  body {
    @apply font-spartan transition-colors duration-300 bg-light-bg text-light-text dark:bg-dark-bg dark:text-white;
  }
}

